...
        else { return }
        view?.updateAvatar(url: url)
    }
    
    func createLogoutAlert() -> UIAlertController {
        let alert = UIAlertController(
            title: "Пока, пока!",
            message: "Уверены что хотите выйти?",
            preferredStyle: .alert)
        
        let actionCancel = UIAlertAction(
            title: "Да",
            style: .default,
            handler: {_ in
                self.cleanDataAndSwitchToSplash()
            })
        actionCancel.accessibilityIdentifier = "Yes"
        alert.addAction(actionCancel)
        
        let actionContinue = UIAlertAction(
            title: "Нет",
            style: .default,
            handler: nil)
...
